--- a/package.json
+++ b/package.json
@@ -6,19 +6,16 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "engines": {
-    "node": "16.x"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.7",
-    "cors": "^2.8.5",
     "express": "^4.18.2",
     "form-data": "^4.0.0",
     "fs": "^0.0.1-security",
     "node-fetch": "^2.7.0",
-    "openai": "^4.28.0"
+    "openai": "^4.28.0",
+    "cors":"^2.8.5"
   }
 }
