--- a/package.json
+++ b/package.json
@@ -2,20 +2,19 @@
   "name": "nodejs-server",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.7",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "form-data": "^4.0.0",
-    "fs": "^0.0.1-security",
-    "node-fetch": "^2.7.0",
-    "openai": "^4.28.0",
-    "cors":"^2.8.5"
+    "node-fetch": "^2.7.0"
   }
 }
